# mgrep

./: Makefile.in  README.md  config.h.in  configure  configure.ac
man/: Makefile.am  Makefile.in  mgrep.1
src/: Makefile.am  Makefile.in  broker.cc  broker.h  bwt.cc  bwt.h  casefolding.cc  casefolding.h  global.cc  global.h  main.cc  match.test  treenode.h  trie.cc  trie.h  worddivider.cc  worddivider.h
